Update events page

--- a/website/templates/website/events/events.html
+++ b/website/templates/website/events/events.html
@@ -9,36 +9,64 @@
     ECSS runs numerous social events throughout the year for its members. These range from industry events with top employers to nightlife events (alcohol is not mandatory!) to board game evenings.
   </p>
   <p>
-    The timeline below shows some of our top events we have planned for 2018/19. We will also be running smaller events so that there will be at least one event per week. You can check what events are on at our <a href='https://www.facebook.com/ecss.soton/'>Facebook page</a>.
+    The timeline below shows some of our top events we've had and have planned for 2019/20. We will also be running smaller events so that there will be at least one event per week. You can check what events are on at our <a href='https://www.facebook.com/ecss.soton/'>Facebook page</a>.
   </p>
   <div class="mb-3">
     <div class="timeline">
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
           <h5>Freshers' Social</h5>
-          <p>Welcome freshers! This is an evening dedicated to introducing you to the department and the society. Hosted in the department and at the Hobbit.</p>
-          <p>25th Sept. 2018</p>
+          <p>Welcome freshers! On this evening, we introduced you to ECSS with 140 free pizzas and a crawl through Portswood.</p>
+          <p>24th Sept. 2019</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-right">
-          <div class="timeline-content">
-            <h5>Video Game Social</h5>
-            <p>Everyone gets together in the labs to eat pizza and play some video games - casual and competitive. There will also be board games available if video games aren't your fancy.</p>
-            <p>4th Oct. 2018</p>
-          </div>
+        <div class="timeline-content">
+          <h5>Video Game Social</h5>
+          <p>Everyone gets together in the labs to eat pizza and play some video games - casual and competitive. There are also board games available if video games aren't your fancy.</p>
+          <p>3rd Oct. 2019</p>
         </div>
+      </div>
+      <div class="timeline-container timeline-container-left">
+        <div class="timeline-content">
+          <h5>White T-Shirt Social</h5>
+          <p>A traditional country-wide form of social, involving a bar crawl with challenges and writing nonsense on each other's t-shirts.</p>
+          <p>4th Oct. 2019</p>
+        </div>
+      </div>
+      <div class="timeline-container timeline-container-right">
+        <div class="timeline-content">
+          <h5>Oceana Fire Social</h5>
+          <p>With everyone dressing up in red clothing, we invaded Wetherspoons and then Oceana for our traditional trip to Oceana.</p>
+          <p>9th Oct. 2019</p>
+        </div>
+      </div>
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
           <h5>Halloween House Crawl</h5>
-          <p>Tour the committee's houses on an evening filled with spooks and laughs. Dress up (either as your favourite ECS lecturer or something scary 👻) and judge our student digs!</p>
-          <p>26th Oct. 2018</p>
+          <p>Touring three committee houses with decorations and drinks at each stop, everyone dressed  up in super scary costumes on one of our biggest socials!</p>
+          <p>25th Oct. 2019</p>
+        </div>
+      </div>
+      <div class="timeline-container timeline-container-right">
+        <div class="timeline-content">
+          <h5>Smash Bros Tournament</h5>
+          <p>Spreading over 3 Nintendo Switches, a huge tournament of Smash bros took place with free pizza as always!</p>
+          <p>14th Nov. 2019</p>
+        </div>
+      </div>
+      <div class="timeline-container timeline-container-left">
+        <div class="timeline-content">
+          <h5>Beach Party</h5>
+          <p>In the cold of winter, we gathered in The Hobbit with shorts, leis, beer pong and birthday cake for our society president.</p>
+          <p>19th Nov. 2019</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-right">
         <div class="timeline-content">
           <h5>Christmas Party</h5>
           <p>Party in style at our annual Christmas do! Dress to kill and show off your dancing 'skills'.</p>
-          <p>Dec. 2018</p>
+          <p>Dec. 2019</p>
         </div>
       </div>
       <hr>
@@ -46,22 +74,22 @@
         <div class="timeline-content">
           <h5>Hackathon</h5>
           <p>Flex your programming talent for exciting prizes in our 24 hour hackathon challenge. Would recommend to anyone who loves to code.</p>
-          <p>Feb. 2019</p>
+          <p>Feb. 2020</p>
         </div>
       </div>
       <hr>
       <div class="timeline-container timeline-container-right">
         <div class="timeline-content">
-          <h5>BBQ</h5>
-          <p>Top off your exam season with food on us! Also hosted at the Hobbit, come hangout with your friends in the sun.</p>
-          <p>Jun. 2019</p>
+          <h5>Hobbit BBQ</h5>
+          <p>Top off your exam season with food on us! Also hosted at the Hobbit, come hangout with your friends in the sun with an abundance of free burgers and hot dogs.</p>
+          <p>Jun. 2020</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
           <h5>Boat Ball</h5>
-          <p>Fancy yourself a sea captain? Dress like it and we might let you pilot our end of year boat ball. Black tie and champagne advised.</p>
-          <p>Jun. 2019</p>
+          <p>Round off the year with a fancy ball on a boat! Smart attire, posh food and delicious cocktails to get some quality social media posts.</p>
+          <p>Jun. 2020</p>
         </div>
       </div>
     </div>
@@ -73,5 +101,6 @@
   <p>
     Please note that photography and filming might be taking place at our events and ECSS will be using them. Please let us know if you do not want to be photographed/filmed. Find out more in our <a href="{% url 'website:media-notice' %}">media notice</a>.
   </p>
+  <small class="text-muted">Last updated on 24th Nov 2019.</small>
 </section>
 {% endblock %}
