Update about page constitution link

--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -34,7 +34,7 @@
       We also provide academic and job related activities such as talks from external companies, including those that sponsor ECSS, as well as ECS alumni.
     </p>
     <p>
-      We are always open however, to new and fresh ideas of events that you think we should run. If you have an ideas, send it our way and we'll see what we can do! Our most recent <a href="https://society.ecs.soton.ac.uk/filestore/index.php/s/idGPSGlxT15tbHi">Constitution</a>, <a href="https://www.susu.org/groups/ecss">SUSU Society Page</a>, our latest <a href="https://society.ecs.soton.ac.uk/voteresult/">Election Results</a> and the subsequent pages on this website are available for your immediate browsing. If at any point you require any more information, or are interested in sponsoring our society, please do not hesitate to contact us.
+      We are always open however, to new and fresh ideas of events that you think we should run. If you have an ideas, send it our way and we'll see what we can do! Our most recent <a href="https://society.ecs.soton.ac.uk/constitution/">Constitution</a>, <a href="https://www.susu.org/groups/ecss">SUSU Society Page</a>, our latest <a href="https://society.ecs.soton.ac.uk/voteresult/">Election Results</a> and the subsequent pages on this website are available for your immediate browsing. If at any point you require any more information, or are interested in sponsoring our society, please do not hesitate to contact us.
     </p>
   </section>
 </section>
