--- a/website/templates/website/events/events.html
+++ b/website/templates/website/events/events.html
@@ -9,72 +9,72 @@
     ECSS runs numerous social events throughout the year for its members. These range from industry events with top employers to nightlife events (alcohol is not mandatory!) to board game evenings.
   </p>
   <p>
-    The timeline below shows some of our top events we've had and have planned for 2019/20. We will also be running smaller events so that there will be at least one event per week. You can check what events are on at our <a href='https://www.facebook.com/ecss.soton/'>Facebook page</a>.
+    The timeline below shows some of our "highlight" events we've had and have planned for 2021/22. We will also be running smaller events so that there will be at least one event per week. You can check what events are on at our <a href="https://www.facebook.com/ecss.soton/">Facebook page</a> as well as our <a href="https://discord.gg/thNwer4">Discord</a>.
   </p>
   <div class="mb-3">
     <div class="timeline">
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
-          <h5>Freshers' Social</h5>
-          <p>Welcome freshers! On this evening, we introduced you to ECSS with 140 free pizzas and a crawl through Portswood.</p>
-          <p>24th Sept. 2019</p>
+          <h5>JumpStart 2021</h5>
+          <p>Welcome freshers! During this packed week, we would'ave introduced you to ECSS with a large selection of events including the yearly freshers' City Challenge, ECS Bunfight, the big "Pizza and Booze" Social, and finishing the week with our first micro (10h) Hackathon of the year</p>
+          <p>27th Sept. 2021</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-right">
         <div class="timeline-content">
+          <h5>Halloween House Crawl</h5>
+          <p>Touring three committee houses with decorations and drinks at each stop, everyone dressed  up in super scary costumes on one of our biggest socials!</p>
+          <p>31st Oct. 2021</p>
+        </div>
+      </div>
+      <div class="timeline-container timeline-container-left">
+        <div class="timeline-content">
           <h5>Video Game Social</h5>
           <p>Everyone gets together in the labs to eat pizza and play some video games - casual and competitive. There are also board games available if video games aren't your fancy.</p>
-          <p>3rd Oct. 2019</p>
+          <p>November 2021</p>
+        </div>
+      </div>
+      <div class="timeline-container timeline-container-right">
+        <div class="timeline-content">
+          <h5>November Hackaton</h5>
+          <p>Flex your programming talent for exciting prizes in our 24 hour hackathon challenge. Would recommend to anyone who loves to code, or to show off</p>
+          <p>November 2021</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
           <h5>White T-Shirt Social</h5>
-          <p>A traditional country-wide form of social, involving a bar crawl with challenges and writing nonsense on each other's t-shirts.</p>
-          <p>4th Oct. 2019</p>
-        </div>
-      </div>
-      <div class="timeline-container timeline-container-right">
-        <div class="timeline-content">
-          <h5>Oceana Fire Social</h5>
-          <p>With everyone dressing up in red clothing, we invaded Wetherspoons and then Oceana for our traditional trip to Oceana.</p>
-          <p>9th Oct. 2019</p>
-        </div>
-      </div>
-      <div class="timeline-container timeline-container-left">
-        <div class="timeline-content">
-          <h5>Halloween House Crawl</h5>
-          <p>Touring three committee houses with decorations and drinks at each stop, everyone dressed  up in super scary costumes on one of our biggest socials!</p>
-          <p>25th Oct. 2019</p>
-        </div>
-      </div>
-      <div class="timeline-container timeline-container-right">
-        <div class="timeline-content">
-          <h5>Smash Bros Tournament</h5>
-          <p>Spreading over 3 Nintendo Switches, a huge tournament of Smash bros took place with free pizza as always!</p>
-          <p>14th Nov. 2019</p>
-        </div>
-      </div>
-      <div class="timeline-container timeline-container-left">
-        <div class="timeline-content">
-          <h5>Beach Party</h5>
-          <p>In the cold of winter, we gathered in The Hobbit with shorts, leis, beer pong and birthday cake for our society president.</p>
-          <p>19th Nov. 2019</p>
+          <p>We are going through all the top pubs in Portswood - a fun night of drinking and writing nonesense on eachother's t-shirts</p>
+          <p>December 2021</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-right">
         <div class="timeline-content">
           <h5>Christmas Party</h5>
           <p>Party in style at our annual Christmas do! Dress to kill and show off your dancing 'skills'.</p>
-          <p>Dec. 2019</p>
+          <p>December 2021</p>
+        </div>
+      </div>
+      <div class="timeline-container timeline-container-left">
+        <div class="timeline-content">
+          <h5>The Big ECSS GameJam</h5>
+          <p>Show off both your creativity and code skills during our February Game Jam.</p>
+          <p>February 2022</p>
+        </div>
+      </div>
+      <div class="timeline-container timeline-container-right">
+        <div class="timeline-content">
+          <h5>Flip Out Social</h5>
+          <p>Flip Out Southampton's Over 18s Night include jumping around their massive trampoline park with LIVE Drum and Bass</p>
+          <p></p>
         </div>
       </div>
       <hr>
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
-          <h5>Hackathon</h5>
-          <p>Flex your programming talent for exciting prizes in our 24 hour hackathon challenge. Would recommend to anyone who loves to code.</p>
-          <p>Feb. 2020</p>
+          <h5>April Hackathon</h5>
+          <p>Our third Hackathon of the year. Once again, a good chance to flex and win prizes</p>
+          <p>April 2022</p>
         </div>
       </div>
       <hr>
@@ -82,25 +82,25 @@
         <div class="timeline-content">
           <h5>Hobbit BBQ</h5>
           <p>Top off your exam season with food on us! Also hosted at the Hobbit, come hangout with your friends in the sun with an abundance of free burgers and hot dogs.</p>
-          <p>Jun. 2020</p>
+          <p>May 2022</p>
         </div>
       </div>
       <div class="timeline-container timeline-container-left">
         <div class="timeline-content">
-          <h5>Boat Ball</h5>
-          <p>Round off the year with a fancy ball on a boat! Smart attire, posh food and delicious cocktails to get some quality social media posts.</p>
-          <p>Jun. 2020</p>
+          <h5>Summer Ball</h5>
+          <p>Round off the year with our fancy ball! Smart attire, posh food and delicious cocktails to get some quality social media posts.</p>
+          <p>June 2022</p>
         </div>
       </div>
     </div>
-    <small class="text-muted">Note: the plan shown in the timeline may be subject to change.</small>
+    <small class="text-muted">Note: the plan shown in the timeline IS NOT LIMITED and may, in fact, be subject to change. We always welcome new cool ideas from society members!</small>
   </div>
   <p>
     You can always come back to our website or follow us on Facebook for updates and checkout our events information.
   </p>
   <p>
-    Please note that photography and filming might be taking place at our events and ECSS will be using them. Please let us know if you do not want to be photographed/filmed. Find out more in our <a href="{% url 'website:media-notice' %}">media notice</a>.
+    Please note that photography and filming might be taking place at our events and ECSS will be using them. Please let us know if you do not want to be photographed/filmed. Find out more in our <a href="https://society.ecs.soton.ac.uk/media-notice/">media notice</a>.
   </p>
-  <small class="text-muted">Last updated on 24th Nov 2019.</small>
+  <small class="text-muted">Last updated on 22nd Aug. 2021.</small>
 </section>
 {% endblock %}
