--- a/website/templates/website/committee/committee-overview.html
+++ b/website/templates/website/committee/committee-overview.html
@@ -23,7 +23,7 @@
       </ul>
     </div>
     <div class="col-md-6">
-      <img class="img-fluid" src="{% static 'website/content/committee-group.jpg' %}" alt="2019-2020 ECSS committee group at STEM Summer Ball 2019">
+      <img class="img-fluid" src="{% static 'website/content/committee-group.jpg' %}" alt="20120-2021 ECSS committee group at The Common">
     </div>
   </div>
   <section class="mt-3">
