Add Discord to footer

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -120,6 +120,7 @@
             <dd class="footer-item footer-item-icon"><a href="https://www.facebook.com/ecss.soton/" class="footer-link-icon" aria-label="Facebook page"><i class="fab fa-facebook" title="ECSS Facebook page" aria-hidden="true"></i></a></dd>
             <dd class="footer-item footer-item-icon"><a href="https://twitter.com/ecs_society" class="footer-link-icon" aria-label="Twitter"><i class="fab fa-twitter" title="ECSS Twitter" aria-hidden="true"></i></a></dd>
             <dd class="footer-item footer-item-icon"><a href="https://www.instagram.com/ecss_soton/" class="footer-link-icon" aria-label="Instagram"><i class="fab fa-instagram" title="ECSS Instagram" aria-hidden="true"></i></a></dd>
+            <dd class="footer-item footer-item-icon"><a href="https://discord.com/invite/thNwer4" class="footer-link-icon" aria-label="Discord"><i class="fab fa-discord" title="ECSS Discord" aria-hidden="true"></i></a></dd>
             <dd class="footer-item footer-item-icon"><a href="https://github.com/ecss-soton" class="footer-link-icon" aria-label="GitHub"><i class="fab fa-github" title="ECSS GitHub" aria-hidden="true"></i></a></dd>
           </dl>
         </div>
